# py_langchain_explore

./: .gitignore  Home.py  README.md  app.py  chatPromptTemplate.ipynb  few_shot_in_memory.ipynb  few_shot_prompt.ipynb  haiku.ipynb  notebook.ipynb  pyproject.toml  rag_challenge.ipynb  rag_explore.ipynb
pages/: DocumentGPT.py  PrivateGPT.py
