[project]
name = "explore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.14",
    "nltk>=3.9.1",
    "openai>=1.75.0",
    "streamlit>=1.45.0",
    "unstructured>=0.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "python-dotenv>=1.1.0",
]
